# origin-game-server

./: Dockerfile  PROJECT_ANALYSIS.md  UBUNTU_SERVER_SETUP.md  WINDOWS_QUICK_START.md  disable_jemalloc_quick.sh  docker-compose.yml  fix_lvm_c.sh  helper.txt  setup_mac_server.sh
work/: Makefile  README.en.md  README.md  check_status.sh  ok.txt  start  start_all_servers.sh
work/3rd/lua-cjson/: lua_cjson.c
work/3rd/lua-zset/: Makefile
work/3rd/luafilesystem/: config
work/3rd/navgation/DetourTileCache/: CMakeLists.txt
work/3rd/navgation/DetourTileCache/Include/: DetourTileCache.h
work/3rd/navgation/DetourTileCache/Source/: DetourTileCache.cpp
work/3rd/navgation/Recast/: CMakeLists.txt
work/3rd/skynet/: 404.html
work/3rd/zlib/: CMakeLists.txt
work/common/errorcode/: ErrorCode.cs  ErrorCode.lua
work/common/luaclib_src/: LuaXML_lib.c  LuaXML_lib.h  StressTest.c  lua-client.c  lua-gzip.c  lua-log.c  lua-reg.c  lua-rsa.c  lua-timer.c  lua_curl.c  start.c
work/common/lualib/: Common.lua  EntityLoad.lua  Enum.lua  LogDefine.lua  LogLogic.lua  LuaExt.lua  LuaXML.lua  MergeProtocol.lua  Preload.lua  Random.lua  ReadCsv.lua  Timer.lua
work/common/mapmesh/: buildNavMesh.lua
work/common/protocol/: Common.sproto  Db.sproto  Protocol.sproto
work/common/service/: AStarMgr.lua  AccountMgr.lua  AccountRefer.lua  AoiMgr.lua  AuthImage.lua  CheckPointAStarMgr.lua  CommonLoadMgr.lua  EnumInit.lua  FileUploadMgr.lua  GCMgr.lua  Hotfix.lua  InitServer.lua  LogHook.lua  LogProxy.lua  LoginMysqlAgent.lua  MongoAgent.lua  MonitorPublish.lua  MonitorSubscribe.lua  MultiSnax.lua  MysqlAgent.lua  OnlineMgr.lua  PkIdMgr.lua  PushMsg.lua  PushMsgProxy.lua  RankMgr.lua  ReadConfig.lua  RedisAgent.lua  RegCSProtocol.lua  RoleQuery.lua  Rpc.lua  SysLog.lua  SystemEmailMgr.lua  Web.lua  WebAgent.lua  WebProxy.lua
work/etc/: battle.conf  center.conf  chat.conf  cluster_db1.lua  common.conf  db.conf  game.conf  log.conf  login.conf  monitor.conf  push.conf  start_battle.sh  start_center.sh  start_chat.sh  start_common.sh  start_db.sh  start_game.sh  start_log.sh  start_login.sh  start_monitor.sh  start_nginx.sh  start_push.sh  start_redis.sh
(+595 files in other folders)
